Fix EZP-23829: Paragraph alignment ignored in legacy rendered frontend
(cherry picked from commit 7bf758a678c7b045c29deb1ad61f7f15b55ac6b4)

--- a/packages/ezdemo_extension/ezextension/ezdemo/design/ezdemo/less/utilities.less
+++ b/packages/ezdemo_extension/ezextension/ezdemo/design/ezdemo/less/utilities.less
@@ -1,6 +1,19 @@
 // UTILITY CLASSES
 // ---------------
 
+.text-left {
+  text-align: left;
+}
+.text-right {
+  text-align: right;
+}
+.text-center {
+  text-align: center;
+}
+.text-justify {
+  text-align: justify;
+}
+
 // Quick floats
 
 .pull-right {
